hphp/hack/test/typecheck/class_abstract_final_3.php
<?hh // partial

abstract final class Foo {
  public static function bar() {}
}

class C extends Foo {}
